# ligetron

./: .gitmodules  CMakeLists.txt  README.md
benchmark/batch-pc-43bits/: edit65536_10_.txt  edit65536_11_.txt  edit65536_12_.txt  edit65536_13_.txt  edit65536_14_.txt  edit65536_15_.txt  edit65536_16_.txt  edit65536_17_.txt  edit65536_18_.txt  edit65536_19_.txt  edit65536_20_.txt  edit65536_21_.txt  edit65536_22_.txt  edit65536_23_.txt  edit65536_24_.txt  edit65536_25_.txt  edit65536_26_.txt  edit65536_27_.txt  edit65536_28_.txt  edit65536_29_.txt  edit65536_2_.txt  edit65536_30_.txt  edit65536_31_.txt  edit65536_32_.txt  edit65536_3_.txt  edit65536_4_.txt  edit65536_5_.txt  edit65536_6_.txt  edit65536_7_.txt  edit65536_8_.txt  edit65536_9_.txt  edit_10_.txt  edit_11_.txt  edit_12_.txt  edit_13_.txt  edit_14_.txt  edit_15_.txt  edit_16_.txt  edit_17_.txt  edit_18_.txt  (+22 more)
benchmark/nonbatch-pc-43bits/: MST_1.3M.txt  MST_1.6B.txt  MST_100K.txt  MST_200M.txt  MST_20M.txt  MST_250K.txt  MST_3.2M.txt  MST_4B.txt  MST_500M.txt  MST_50M.txt  MST_525K.txt  MST_75M.txt  MST_8M.txt  MST_extra1.txt  MST_extra2.txt  MST_extra3.txt  count_1024_2048.txt  count_1024_4096.txt  count_128_256.txt  count_128_512.txt  count_16_32.txt  count_16_64.txt  count_2048_4096.txt  count_2048_8192.txt  count_256_1024.txt  count_256_512.txt  count_32_128.txt  count_32_64.txt  count_4096_16384.txt  count_4096_8192.txt  count_4_16.txt  count_4_8.txt  count_512_1024.txt  count_512_2048.txt  count_64_128.txt  count_64_256.txt  count_8_16.txt  count_8_32.txt  edit_1024_1024.txt  edit_1024_2048.txt  (+19 more)
browser/: README.md  prover.html  prover.js  prover.wasm  verifier.data  verifier.html  verifier.js  verifier.wasm
cmake/: FindSodium.cmake
examples/: MST.cpp  README.md  count_freq.cpp  edit_distance.cpp  samplegraph.c
include/: base.hpp  binary_parser.hpp  bridge.hpp  call_host.hpp  context.hpp  execution.hpp  fixed_vector.hpp  instruction.cpp  instruction.hpp  ir.hpp  params.hpp  prelude.hpp  runtime.hpp  thread_model.hpp  type.hpp  value.hpp
include/util/: deflate.hpp  json.hpp  log.cpp  log.hpp  string.hpp  timer.hpp  timestamp.hpp  tree.hpp  uuid.hpp
include/util/boost/: portable_binary_iarchive.hpp  portable_binary_oarchive.hpp
include/zkp/: #nonbatch_execution.hpp#  argument.hpp  circuit.hpp  common.hpp  constraints.hpp  encoding.hpp  gc.hpp  hash.hpp  merkle_tree.hpp  nonbatch_context.hpp  nonbatch_execution.hpp  ntt.hpp  number_theory.hpp  poly_field.hpp  prime_field.hpp  prover_context.hpp  prover_execution.hpp  random.hpp  relation.hpp  variable.hpp
scripts/: bench.sh
src/: LR.cpp  fib.c  prover.cpp  verifier.cpp  wasm.cpp
wasm/: count.wasm  edit.wasm  mst.wasm  sha256.wasm
